2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘getpwuid_r’, not ‘getpwuid’.

	* b-excwho.c (getusername) [HAVE_GETUID && HAVE_GETPWUID]:
	Delete code; move #else code to...
	[!HAVE_GETPWUID_R]: ...here.
	[HAVE_GETPWUID_R]: Use ‘getpwuid_r’ to find user name.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use autoconf macro to enable 64-bit file offsets.

	* base.h (_FILE_OFFSET_BITS): Remove #define.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Use ‘%zu’ for ‘size_t’ arg in format string.

	* rlog.c (main): Use ‘%zu’ in format
	string to output the ‘GROK (deltas_count)’.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Cast precision expression for ‘%.*s’ to ‘int’.

	Omission from 2010-05-18,
	"Don't mutate string in ‘checkidentifier’".
	* rcsmap.c (checkidentifier):
	Cast precision expression for ‘%.*s’ to ‘int’.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Use ‘%zu’ for ‘size_t’ arg in format string.

	* rcsedit.c (finisheditline): Use ‘%zu’ in
	format string to output the ‘finctx->script_lno’.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Simplify stream/fd sync; avoid ‘fflush’ on input.

	* ci.c (main): For sending ‘workptr’ fd to diff(1),
	don't save current fd position, ‘fflush’ conditionally,
	and restore afterwards; instead, seek to beginning only.
	Also, do all this regardless of ‘STDIO_P (workptr)’.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume availability of ‘waitpid’.

	* rcsutil.c (runv) [!defined HAVE_WAITPID]:
	Delete code and surrounding preprocessor conditional.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix typo: group ‘getusername’ cond exprs correctly.

	Regression introduced 2010-04-11,
	"Move cached username into `struct behavior'".
	* b-excwho.c (getusername) [getlogin_is_secure]:
	Move close-paren back one line, thus promoting
	‘&& !JAM (getlogin ())’ to top-level of expression.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
